2003-03-27  Mark Mitchell  <mark@codesourcery.com>

	* GNUmakefile.in (.PHONY): Mention more targets.
	(check): Add check-rsh.
	(check-rsh): New target.
	* qm/test/classes/rsh_target.py
	(RSHTarget.__init__): Always set "arguments".
	(RSHTarget._GetInterpreter): Fix thinko.
	* qm/test/doc/reference.xml: Mention the fact that test classes
	should not use fields with the same names as class variables in
	base classes.
	* NEWS: Mention changes.

2003-02-24  Mark Mitchell  <mark@codesourcery.com>

	* scripts/qm-release (build_rpm): Use rpmbuild, rather than rpm,
	to build an RPM.

	* test/share/dtml/navigation-bar.dtml (hide_menu): Work around
	JavaScript issue in Mozilla.
	* NEWS: Update.

2003-01-21  Jeffrey D. Oldham  <oldham@codesourcery.com>

	* qm/test/target.py (Target._RecordResult): Always record the
	target which the concurrent execution code assumes exists.

2002-12-31  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/doc/reference.xml: Fix typo.

2002-12-23  Mark Mitchell  <mark@codesourcery.com>

	* qm/extension.py (get_class_arguments): Use the __dict__ of the
	class, rather than a direct attribute reference, when checking to
	see if the argument list has already been computed.
	(get_class_arguments_as_dictionary): Likewise.

2002-12-23  Mark Eichin <eichin@metacarta.com>

	* qm/test/test.py (Test.TestField): Fix typo in comment.

2002-12-20  Mark Mitchell  <mark@codesourcery.com>

	* qm/extension.py (get_class_arguments): Allow derived classe
	arguments to override base class arguments.
	(get_class_arguments_as_dictionary): Reimplement.
	* tests/xmldb/QMTest/test_inheritance.py: New file.
	* tests/xmldb/QMTest/classes.qms: Update.
	* tests/xmldb/api.qms/test.qms/derived.qmt: New test.
	
2002-12-18  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/file.py (SubstitutionField): Rework, using
	TupleField as a base class.
	(FileContentsTest.Run): Remove exception-handling code.
	(FileContentsTest.__PerformSubstitutions): Correct.